samples/_failures_safe/1761727623_1c9fc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb40cb77.c: In function ‘main’:
./samples/SAFE/__tmp_fb40cb77.c:156:20: error: expected ‘;’ at end of input
  156 |         free_matrix
      |                    ^
      |                    ;
./samples/SAFE/__tmp_fb40cb77.c:156:9: error: expected declaration or statement at end of input
  156 |         free_matrix
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_fb40cb77.c:156:9: error: expected declaration or statement at end of input
